--- a/menyu pages/taobao.css
+++ b/menyu pages/taobao.css
@@ -344,3 +344,13 @@ footer .background {
     color: white;
     background-color: #449be4;
 }
+
+/* meadia start */
+@media screen and (max-width: 992px){
+    .containerr {
+        display: none;
+    }
+    footer {
+        display: none;
+    }
+}
