--- a/css/greenpost.css
+++ b/css/greenpost.css
@@ -1001,7 +1001,9 @@ footer .background {
         display: none;
     }
     .chat {
-        position: absolute;
+        position: fixed;
+        bottom: 2%;
+        right: 4%;
     }
 }
 
