--- a/css/greenpost.css
+++ b/css/greenpost.css
@@ -1,5 +1,5 @@
-@import url(css/reset.css);
-@import url(css/animate.css);   
+@import url(reset.css);
+@import url(animate.css);   
 * {
     padding: 0;
     margin: 0;
@@ -200,6 +200,7 @@ ul {
     padding: 10px 0;
     width: 400px;
     box-shadow: 0 0 20px rgba(0,0,0,0.3);
+    z-index: 100;
 }
 
 .containerr .menu-block a{
