--- a/css/login.css
+++ b/css/login.css
@@ -1,5 +1,6 @@
 @import url(reset.css);
-@import url(animate.css);
+@import url(animate.css); 
+@import url(nav.css);
 
 *{
     font-family: sans-serif;
@@ -58,9 +59,6 @@
     border-top-left-radius: 0;
     padding: 1.25rem;
     max-width: 450px;
-}
-form input {
-    margin-bottom: 10px;
 }
 
 input{
@@ -124,21 +122,6 @@ input{
     line-height: 1.5;
     border-radius: 0.25rem;
     transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out;
-}
-.d-flex img {
-    margin-right: 10px;
-}
-.d-flex div .brand {
-    display: block;
-    font-weight: bold;
-    font-size: 27px;
-    color: #21bf86;
-}
-.d-flex div .slogin {
-    display: block;
-    /* font-weight: 300; */
-    font-size: 12px;
-    color: #21bf86;
 }
 
 @media only screen and (max-width: 576px){
