--- a/css/taobao.css
+++ b/css/taobao.css
@@ -202,23 +202,23 @@ ul {
 /* sitee-taobao start */
 @keyframes change {
     0%, 100% {
-        background-image: url(/img/women.png);
+        background-image: url(../img/women.png);
     }
     
     30% {
-        background-image: url(/img/women.png);
+        background-image: url(../img/women.png);
     }
     34% {
-        background-image: url(/img/childrens.png);
+        background-image: url(../img/childrens.png);
     }
     61% {
-        background-image: url(/img/childrens.png);
+        background-image: url(../img/childrens.png);
     }
     66% {
-        background-image: url(/img/man2.png);
+        background-image: url(../img/man2.png);
     }
     96% {
-        background-image: url(/img/man2.png);
+        background-image: url(../img/man2.png);
     }
 }
 
