--- a/admin panel/css/glavnaya.css
+++ b/admin panel/css/glavnaya.css
@@ -119,6 +119,10 @@
     line-height: 1.5;
 }
 
+.header .btn-hid2 {
+    display: none;
+}
+
 .header .btn-hid svg {
     font-size: 0.875rem;
     padding: 0.20rem 0.30rem;
@@ -210,7 +214,7 @@
 .b-sidebar-backdrop {
     display: none;
     left: 0;
-    z-index: -1;
+    z-index: 1;
     width: 100vw;
     opacity: .6;
 
@@ -219,6 +223,27 @@
 /* media start */
 
 @media screen and (max-width: 992px){
+    .part .qism1 .btn-hid1 {
+        display: none;
+    }
+
+    .part .qism1 .btn-hid2 {
+        display: block;
+    }
+    
+    .wrapper .part {
+        position: absolute;
+        top: 0;
+    } 
+
+    .b-sidebar-backdrop {
+        position: absolute;
+        top: 0;
+        display: block;
+        width: 100%;
+        height: 100vh;
+    }
+
     .qism2 .block{
         display: none;
     }
