--- a/admin panel/css/tovari.css
+++ b/admin panel/css/tovari.css
@@ -20,6 +20,7 @@
     padding: 1rem 0;
     cursor: pointer;
     min-width: 200px;
+    z-index: 10;
 }
 
 #asosiy{
@@ -117,6 +118,10 @@
     cursor: pointer;
     padding: 0.25rem 0.5rem;
     line-height: 1.5;
+}
+
+.header .btn-hid2 {
+    display: none;
 }
 
 .header .btn-hid svg {
@@ -218,7 +223,7 @@
 .b-sidebar-backdrop {
     display: none;
     left: 0;
-    z-index: -1;
+    z-index: 1;
     width: 100vw;
     opacity: .6;
 
@@ -227,6 +232,28 @@
 /* media start */
 
 @media screen and (max-width: 992px){
+    .part .qism1 .btn-hid1 {
+        display: none;
+    }
+
+    .part .qism1 .btn-hid2 {
+        display: block;
+    }
+
+    .wrapper .part {
+        width: 100%;
+        position: absolute;
+        top: 0;
+    } 
+
+    .b-sidebar-backdrop {
+        position: absolute;
+        top: 0;
+        display: block;
+        width: 100%;
+        height: 100vh;
+    }
+
     .qism2 .block{
         display: none;
     }
@@ -273,9 +300,6 @@
         animation: phone 2s infinite;
     }
 
-    .part {
-        min-width: 100%;
-    }
 }
 
 @media screen and (max-width: 542px){
