--- a/admin panel/css/glavnaya.css
+++ b/admin panel/css/glavnaya.css
@@ -2,7 +2,7 @@
 @import url(animate.css); 
 @import url(nav.css);
 
-*{
+*{ 
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -220,9 +220,79 @@
 
 }
 
+#empty-qism{
+    display: none;
+}
+
+#empty-qism1{
+    display: none;
+}
+
+#kontakti{
+    display: none;
+    transition: .3s;
+}
+
 /* media start */
 
 @media screen and (max-width: 992px){
+
+    #empty-qism{
+        display: block;
+        position: absolute;
+        right: 0;
+        left: 0;
+        background-color: #343a40;
+        opacity: .6;
+        height: 100vh;
+        z-index: 1;
+    }
+
+    #empty-qism1{
+        position: absolute;
+        right: 0;
+        left: 0;
+        background-color: #343a40;
+        opacity: .6;
+        height: 100vh;
+        z-index: 1;
+    }
+
+    #kontakti{
+        display: none;
+        font-family: inherit;
+        font-size: 16px;
+        color: #f8f9fa;
+        font-weight: 700;
+        position: absolute;
+        right: 0;
+        line-height: 1.6;
+        margin-right: -270px;
+        height: 100vh;
+        max-width: 270px;
+        background: #343a40;
+        padding: 1rem 15px;
+        z-index: 2;
+    }
+
+    #kontakti h2{
+        font-size: 2rem;
+        line-height: 1.2;
+        font-weight: 700;
+        margin-bottom: 8px;
+    }
+
+    #kontakti .kontakt-nomer{
+        display: flex;
+        align-items: center;
+        gap: 7px;
+    }
+
+    #kontakti .kontakt-nomer img{
+        width: 16px;
+        height: 16px;
+    }
+
     .part .qism1 .btn-hid1 {
         display: none;
     }
